fixed communication between kubernetes pods and added some comments for the mongo integration
